<resources>
    <string name="app_name">WeLine</string>
    <string name="loading_data">loading data</string>
    <string name="connecting">connecting</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="app">App</string>
    <string name="msg">Message</string>
    <string name="me">Me</string>
    <string name="current_net">Current net</string>
    <string name="machine_name">Machine</string>
    <string name="network">Network</string>
    <string name="vip">Virtual IP</string>
    <string name="lanIp">Local IP</string>
    <string name="domain">Domain</string>
    <string name="nodes">Nodes</string>
    <string name="delay">Delay</string>
    <string name="uptime">Uptime</string>
    <string name="error_dlg_title">Error</string>
    <string name="error_string_user_diabled">Your account not found.</string>
    <string name="error_string_max_device">The number of registered devices has reached the maximum.</string>
    <string name="error_string_no_network">Unusable Network.</string>
    <string name="error_string_device_disabled">Your device is restricted to login.</string>
    <string name="error_string_device_dup">Your device had been online.</string>
    <string name="error_string_device_locked">Your device had been locked.</string>
    <string name="error_string_user_unactive">Account is not activated.</string>
    <string name="error_string_user_locked">Account has been locked.</string>
    <string name="balance">Balance</string>
    <string name="date">Valid until</string>
    <string name="score">NB</string>
    <string name="loading">Loading&#8230;</string>
    <string name="share_code_time_tips">This share code is valid for 24 hours</string>
    <string name="share_code_tips">This code will become invalid after being used once</string>
    <string name="send_to">Send to</string>
    <string name="cannot_open_file_tip">No apps were found to open this file, you may need to go to the app store to find a suitable app !</string>
    <string name="rename">Rename</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unbind_device_prompt">Do you want to unbind this device?</string>
    <string name="msg_admin_remove_device">Owner unbundling will clear all users. If you need to unbind yourself, please transfer the owner\'s authority first.</string>
    <string name="msg_admin_clear_all">This operation will clear all users in the device. Do you want to execute it?</string>
    <string name="everyone">Everyone</string>
    <string name="self">Self</string>
    <string name="clear_all">Clear all</string>
    <string name="pls_enter_right_dns">Please enter the correct DNS server address</string>
    <string name="pls_enter_right_subnet_ip">Please enter the correct device IP address</string>
    <string name="pls_enter_right_subnet_mask">Please enter the correct subnet mask</string>
    <string name="repeated_subnet">Repeated subnet</string>
    <string name="pls_configure_at_least_one_subnet">Please configure at least one subnet</string>
    <string name="check_all">Check All</string>
    <string name="cancel">Cancel</string>
    <string name="pickerview_cancel">Cancel</string>
    <string name="pickerview_submit">Confirm</string>
    <string name="cancel_share_to_these_users">Do you want to remove the selected user?</string>
    <string name="invite">Invite</string>
    <string name="pls_input_invite_username">Please enter the username you would like to invite</string>
    <string name="unbind_network_prompt">Do you want to delete this network?</string>
    <string name="send_request">Sending request &#8230;</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="auth_success">Authorized success</string>
    <string name="auth_success_tip" translatable="false" />
    <string name="na">N/A</string>
    <string name="ok">OK</string>
    <string name="bind_success">Added successfully</string>
    <string name="qc_code_invalid">The qr code is invalid</string>
    <string name="unselect_snode_msg">Deselect SmartNode before discovering,Are you sure to deselect SmartNode?</string>
    <string name="unselect_snode_title">Deselect SmartNode</string>
    <string name="fail">failed</string>
    <string name="update_device_version">Do you want to update the device version?</string>
    <string name="jws_invalid_ip">Invalid ip/mask/gateway</string>
    <string name="allow_remote_maint">Allow remote access</string>
    <string name="disallow_remote_maint">Disable remote access</string>
    <string name="get_real_time_status_info_fail">Failed to Real-time status info</string>
    <string name="rx_bytes">Public RX</string>
    <string name="tx_bytes">Public TX</string>
    <string name="dlt_rx_bytes">Device RX</string>
    <string name="dlt_tx_bytes">Device TX</string>
    <string name="collect_log">Collect logs</string>
    <string name="stop_collecting_logs">Stop collecting</string>
    <string name="collecting_logs_stop">Collecting logs has been stopped</string>
    <string name="account_email_phone">Account/Email/Mobile</string>
    <string name="password">Password</string>
    <string name="verify_code">Verify code</string>
    <string name="get_verify_code">Get verify code</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget password</string>
    <string name="login">Login</string>
    <string name="use_email">Use email</string>
    <string name="nickname">Nickname</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone">mobile</string>
    <string name="email">email</string>
    <string name="use_phone">Use phone</string>
    <string name="error_phone_number_tips">Please enter the correct mobile number</string>
    <string name="error_phone_email_tips">Please enter the correct email address</string>
    <string name="error_string_pwd_confirm">Inconsistent passwords entered twice</string>
    <string name="error_string_no_nickname">Please enter a nickname no longer than 24 characters</string>
    <string name="error_string_no_firstname">Please enter a first name no longer than 32 characters</string>
    <string name="error_string_no_lastname">Please enter a last name no longer than 32 characters</string>
    <string name="register_succ">Register success</string>
    <string name="error_string_no_auxcode">Please get and fill in the verification code</string>
    <string name="reset_pwd_succ">Password reset success</string>
    <string name="retrieve_password">Reset password</string>
    <string name="commit">submit</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="support">support</string>
    <string name="home_page">home page</string>
    <string name="checking_for_updates">Checking for updates&#8230;</string>
    <string name="no_update">No update</string>
    <string name="update_fail">Check for update failures</string>
    <string name="download_now">Download now</string>
    <string name="download_later">Later</string>
    <string name="pls_grant_storage_permission">Please grant read/write permissions of mobile storage</string>
    <string name="update">update</string>
    <string name="downloading">downloading</string>
    <string name="select_browser">Pls select the browser</string>
    <string name="bind_device">Bind Device</string>
    <string name="input_regist_code">Pls enter the registration code</string>
    <string name="disagree">disagree</string>
    <string name="agree">agree</string>
    <string name="agreed">agreed</string>
    <string name="disagreed">disagreed</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="display_by_grid">Display by grid</string>
    <string name="display_by_list">Display by list</string>
    <string name="query_space_failure">Query space failed</string>
    <string name="confirm_reboot_device">Confirm reboot device?</string>
    <string name="confirm_power_off_device">Confirm shutdown device?</string>
    <string name="power_off_device">Shutting down &#8230;</string>
    <string name="rebooting_device">Rebooting &#8230;</string>
    <string name="success_power_off_device">shutdown succeed</string>
    <string name="success_reboot_device">reboot succeed</string>
    <string name="app_mng">app management</string>
    <string name="title_apps_phone">Phone</string>
    <string name="getting_app_list">Getting app list&#8230;</string>
    <string name="error_open_app">Sorry, Cannot open this application</string>
    <string name="error_get_app_details">Do not get app information</string>
    <string name="can_not_uninstall">Cannot Uninstall</string>
    <string name="app_not_found_exception">App not found</string>
    <string name="confirm_uninstall_plugin">Confirm uninstall&#160;&#160;</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstalling_plugin">Uninstalling&#8230;</string>
    <string name="opening_plugin">Opening&#8230;</string>
    <string name="closing_plugin">Closing&#8230;</string>
    <string name="confirm_open_plugin">Confirm open&#160;&#160;</string>
    <string name="confirm_close_plugin">Confirm close&#160;&#160;</string>
    <string name="app_status">Status：&#160;</string>
    <string name="app_state_getting">Getting&#8230;</string>
    <string name="app_state_on">Running</string>
    <string name="app_state_off">Stopped</string>
    <string name="app_state_unknown">Unknown</string>
    <string name="file_service">File Service</string>
    <string name="download_tool">Download Tool</string>
    <string name="multimedia_service">Multimedia Service</string>
    <string name="network_mng">Network Management</string>
    <string name="tips_no_network">You do not have a network yet</string>
    <string name="tips_this_net_no_dev">No other devices are found online in the current network</string>
    <string name="tips_local_net_no_dev">Device not found in LAN</string>
    <string name="tips_no_dev">No device available</string>
    <string name="coming_soon">Coming soon</string>
    <string name="click_to_login">Click to Login</string>
    <string name="use_more_features">Use more features</string>
    <string name="not_connected">Not connected</string>
    <string name="pls_login">Please login</string>
    <string name="tips_log_out_and_delete">Do you want to delete your current account?</string>
    <string name="tips_switch_account">Do you want to switch to %1$s</string>
    <string name="account">Account</string>
    <string name="my_account">My account</string>
    <string name="modify_name">Modify the name</string>
    <string name="modify_pwd">Modify password</string>
    <string name="delete_account">Delete account</string>
    <string name="switch_account">Switch account</string>
    <string name="old_pwd">Old password</string>
    <string name="pls_input_old_pwd">Enter the old password</string>
    <string name="new_pwd">New password</string>
    <string name="pls_input_new_pwd">Enter a new password</string>
    <string name="tips_login">Open the journey of lian</string>
    <string name="dev_name">Name</string>
    <string name="owner">Owner</string>
    <string name="reboot">Restart</string>
    <string name="version_no">Version</string>
    <string name="upgrade_firmware">Upgrade firmware</string>
    <string name="bind_time">Bind time</string>
    <string name="real_time_status_info">Real-time status info</string>
    <string name="status">Status</string>
    <string name="unbound">Unbound</string>
    <string name="device_id" translatable="false">ID</string>
    <string name="device_sn" translatable="false">SN</string>
    <string name="resources">Resources</string>
    <string name="dynamic">Moments</string>
    <string name="identify_code">Identifier</string>
</resources>