<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        app:cardCornerRadius="@dimen/common_6">

        <ScrollView
            android:id="@+id/device_local_sv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_bg_grey250"
            android:scrollbars="vertical">

            <LinearLayout
                android:id="@+id/dialog_app_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_16"
                    android:layout_marginBottom="@dimen/common_16"
                    android:background="@color/color_bg_grey50"
                    android:orientation="vertical">

                    <net.linkmate.app.view.DataItemLayout
                        android:id="@+id/device_local_dil_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:tv_data_text="M3"
                        app:tv_text="@string/dev_name" />

                    <net.linkmate.app.view.DataItemLayout
                        android:id="@+id/device_local_dil_owner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:tv_text="@string/owner"
                        tools:tv_data_text="admin(18666666666)"
                        tools:visibility="visible" />

                    <net.linkmate.app.view.DataItemLayout
                        android:id="@+id/device_local_dil_add_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:tv_text="@string/bind_time"
                        tools:tv_data_text="2019-03-14 11:12:13"
                        tools:visibility="visible" />

                    <net.linkmate.app.view.DataItemLayout
                        android:id="@+id/device_local_dil_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:tv_text="@string/version_no"
                        tools:tv_data_text="3.0.1.1888" />

                    <net.linkmate.app.view.DataItemLayout
                        android:id="@+id/device_local_dil_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:tv_text="@string/device_id"
                        tools:tv_data_text="567891234567890" />

                    <net.linkmate.app.view.DataItemLayout
                        android:id="@+id/device_local_dil_sn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:tv_text="@string/device_sn"
                        tools:tv_data_text="DCBA6A123456" />

                    <net.linkmate.app.view.DataItemLayout
                        android:id="@+id/device_local_dil_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:tv_text="@string/status"
                        tools:tv_data_text="N/A"
                        tools:visibility="visible" />

                    <net.linkmate.app.view.DataItemLayout
                        android:id="@+id/device_local_dil_vip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:tv_text="@string/vip"
                        tools:tv_data_text="N/A"
                        tools:visibility="gone" />

                    <net.linkmate.app.view.DataItemLayout
                        android:id="@+id/device_local_dil_lanip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:tv_text="@string/lanIp"
                        tools:tv_data_text="N/A"
                        tools:visibility="gone" />

                </LinearLayout>

                <Switch
                    android:id="@+id/switch_local_remote"
                    style="@style/StyleDialogDesSwitch"
                    android:layout_marginBottom="@dimen/common_16"
                    android:checked="false"
                    android:text="@string/allow_remote_maint"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/device_local_upgrade"
                    style="@style/StyleDialogDesTvBtn"
                    android:text="@string/upgrade_firmware"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/device_local_lldrd"
                    style="@style/StyleDialogDesTvBtn"
                    android:layout_width="match_parent"
                    android:text="@string/real_time_status_info"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/device_local_get_logcat"
                    style="@style/StyleDialogDesTvBtn"
                    android:layout_width="match_parent"
                    android:text="@string/collect_log" />

                <TextView
                    android:id="@+id/device_local_btn_bind"
                    style="@style/StyleDialogDesTvBtn"
                    android:text="@string/bind_device"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/device_local_reboot"
                    style="@style/StyleDialogDesTvBtn"
                    android:layout_width="match_parent"
                    android:text="@string/reboot"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </LinearLayout>
        </ScrollView>

        <include
            layout="@layout/layout_upgrade_progress"
            android:visibility="gone" />

        <include
            android:id="@+id/layout_lldrd"
            layout="@layout/layout_local_dev_real_data"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/layout_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_trans_black_30"
            android:clickable="true"
            android:visibility="gone">

            <net.linkmate.app.view.ProgressView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                app:dot_color="@color/color_orange"
                app:dot_count="7" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/device_local_iv_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_icon36"
        android:layout_marginTop="@dimen/common_4"
        android:layout_marginBottom="@dimen/common_4"
        android:scaleType="centerInside"
        android:src="@drawable/icon_cancel" />
</LinearLayout>