<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_grey250"
    android:minWidth="300dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_ItemHeight48"
        android:background="@color/bg_white">

        <ImageView
            android:id="@+id/lldrd_iv_back"
            android:layout_width="@dimen/common_icon42"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple_trans_gray"
            android:scaleType="centerInside"
            android:src="@drawable/icon_return_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lldrd_btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bg_ripple_trans_gray"
            android:gravity="center"
            android:padding="@dimen/common_10"
            android:text="@string/action_refresh"
            android:textColor="@color/selector_txt_blue"
            android:textSize="@dimen/txt_15"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <net.linkmate.app.view.DataItemLayout
                android:id="@+id/lldrd_dil_uptime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tv_data_text="@string/na"
                app:tv_text="@string/uptime" />

            <net.linkmate.app.view.DataItemLayout
                android:id="@+id/lldrd_dil_rx_bytes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tv_data_text="@string/na"
                app:tv_text="@string/rx_bytes" />

            <net.linkmate.app.view.DataItemLayout
                android:id="@+id/lldrd_dil_tx_bytes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tv_data_text="@string/na"
                app:tv_text="@string/tx_bytes" />

            <net.linkmate.app.view.DataItemLayout
                android:id="@+id/lldrd_dil_dlt_rx_bytes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tv_data_text="@string/na"
                app:tv_text="@string/dlt_rx_bytes" />

            <net.linkmate.app.view.DataItemLayout
                android:id="@+id/lldrd_dil_dlt_tx_bytes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tv_data_text="@string/na"
                app:tv_text="@string/dlt_tx_bytes" />

            <net.linkmate.app.view.DataItemLayout
                android:id="@+id/lldrd_dil_delay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tv_data_text="@string/na"
                app:tv_text="@string/delay" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>