<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/common_24"
        app:cardBackgroundColor="@color/bg_white"
        app:cardCornerRadius="@dimen/common_10"
        app:cardElevation="@dimen/common_6">

        <LinearLayout
            android:id="@+id/home_ll_empty_to_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/common_12">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_to_login"
                android:textColor="@color/text_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips_login"
                android:textColor="@color/text_dark_gray"
                android:textSize="@dimen/txt_14" />

            <Button
                android:id="@+id/pls_login_btn_login"
                style="@style/Style_btn_bg_primary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_ItemHeight42"
                android:layout_marginTop="@dimen/common_12"
                android:elevation="@dimen/common_10"
                android:text="@string/login"
                android:textColor="@color/text_white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>